--- a/src/Components/News/News.module.css
+++ b/src/Components/News/News.module.css
@@ -3,4 +3,11 @@
     margin-left:20px;
     border: 1px solid black;
     background-color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main p{
+    align-items: center;
 }
