--- a/src/Components/Profile/MyPosts/MyPosts.module.css
+++ b/src/Components/Profile/MyPosts/MyPosts.module.css
@@ -1,16 +1,7 @@
+.wPosts {
+    margin-left: 10px;
+}
 
-.profile {
+.nPosts {
     margin-top: 20px;
-    margin-left: 20px;
-    grid-area: c;
-    background-color: aqua;
-}
-
-.img {
-    width: 100%;
-    height: 100px;
-}
-
-.item {
-    padding: 20px 0px 0px 20px;
 }
